--- a/css/main.css
+++ b/css/main.css
@@ -1007,6 +1007,7 @@ h6 {
 #contato{
   background: linear-gradient(to bottom, #CB2B35 0%, #CB2B35 50%, #fff 50%, #fff 100%);
   height: 100vh;
+  margin-bottom: 50px;
 }
 .fale-conosco{
   display: flex;
@@ -1060,8 +1061,8 @@ input:active{
 }
    /* verificar isso dps */
 @media only screen and (max-width: 600px) {  
-  .contato .form .card{
-   max-width: 200px;
+  .contato .card {
+      max-width: 300px;
    margin: 0 auto;
   }
     #contato {
