--- a/css/main.css
+++ b/css/main.css
@@ -88,8 +88,9 @@ h4 {
 }
 
 h5 {
-  font-size: 1.64rem;
+  font-size: 1.3rem;
   line-height: 110%;
+  color: var(--color-red);
   margin: 1.0933333333rem 0 0.656rem 0;
 }
 
@@ -352,9 +353,11 @@ h6 {
   #model-app{
     display: none;
   }
-                                                                                                                                                                                                                                                                                                                                                    /* sobre no mobile */
+  /* principal pagina que aparece mobile */
     #mobile-sobre {
-      display: block;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       }
       
       #mobile-sobre .sobre-texto {
@@ -368,12 +371,57 @@ h6 {
       #mobile-sobre .btn-denuncie {
         width: 80%;
         margin: 0 auto;
-        margin-top: 50px;
+        margin-top: 40px;
         content: '▼';
       }
+      #mobile-sobre .teste .card{
+        max-width: 400px;
+      }
+      #mobile-sobre .teste h2{
+        color: var(--color-red);
+        font-family:Merriweather, sans-serif ;
+        font-size: 2rem;
+      }
   
-  /* responsivo mobile */
+  /* ========== responsivo mobile principal ========== */
   @media (max-width: 800px) {
+
+    /* ========= paginas que nao aparecem no mobiles =========  */
+    .conteudo-off{
+      display: none;
+    }
+    /* mini menu para ler as novas paginas */
+    .tab {
+      overflow: auto;
+      display: flex;
+      border-radius: 5px;
+      margin-top: 20px;
+      margin-bottom: 10px;
+      background-color: var(--color-red);
+    }
+
+    .tab button {
+      background-color: inherit;
+      float: left;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      color: var(--color-background);
+      padding: 14px 16px;
+      transition: 0.3s;
+      font-size: 17px;
+    }
+
+    .tab button.active {
+      background-color: #7c1c22;
+    }
+
+    .tabcontent {
+      display: none;
+      width: 100%;
+      margin: 0 auto;
+    }
+
 
     /* imagem logo */
     #nav .logo #logo-red {
@@ -392,15 +440,15 @@ h6 {
     #model-desktop{
       display: none;
     }
-        header {
-          height: 240vh;
-        }
+    header {
+      height: 100%;
+    }
     #sobre #sobre-desktop {
           display: none;
         }
     #model-app{
       display: block;
-      height: calc(240vh + 80px);
+      height: calc(330vh + 80px);
       width: 100%;
       text-align: center;
       background: var(--color-background);
@@ -753,11 +801,6 @@ h6 {
       grid-column: 1 / 4;
     }
   }
-
-
-
-
-
   .orientacoes{
     display: grid;
     grid-template-columns:  1fr 450px;
@@ -1031,7 +1074,7 @@ h6 {
   /* Fale conosco- contato */
 #contato{
   background: linear-gradient(to bottom, #CB2B35 0%, #CB2B35 50%, #fff 50%, #fff 100%);
-  height: 100vh;
+  height: 100%;
   margin-bottom: 50px;
 }
 .fale-conosco{
