--- a/css/main.css
+++ b/css/main.css
@@ -448,7 +448,7 @@ h6 {
         }
     #model-app{
       display: block;
-      height: calc(330vh + 80px);
+      height:100%;
       width: 100%;
       text-align: center;
       background: var(--color-background);
