--- a/css/main.css
+++ b/css/main.css
@@ -270,33 +270,129 @@ h6 {
   .icons-bar img:hover{
     scale: 1.3;
   }
-
-  .icons-bar .button-sos{
-      width: 90px;
-      height: 90px;
-      border-radius: 50%;
-      background: var(--color-red);
-      color: var(--color-background);
-      transition: all .4s ease; 
-      cursor: pointer;
-
+ 
+.box-pulse{
+  width: 100%;
+  width: 0;
+  margin-right: 70px;
+  height: 135px;
+  /* margin: 0 auto; */
+  padding: 0 30px;
   }
-  .icons-bar .button-sos:hover{
-    background: #7c1c22;
-    scale: 1.3;
+.box-pulse a {
+  border-radius: 50%;
+  text-decoration:none;
+  display: inline-block;
+  font-size: 1.1em;
+  font-family:Rubik, Geneva, sans-serif;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+}
+.botao-pulse {
+  border-radius: 50%;
+  padding: 40px 30px;
+  width: 100px;
+  height: 100px;
+  color: #fff;
+  background-color: var(--color-red);
+  border-radius:3px; 
+  -webkit-animation: pulse 1s ease infinite;
+  -moz-animation: pulse 1s ease infinite;
+  -ms-animation: pulse 1s ease infinite;
+  -o-animation: pulse 1s ease infinite;
+  animation: pulse 1s ease infinite;
+}
+.botao-pulse:hover {
+  color: #fff;
+}
+.botao-pulse::after,
+.botao-pulse::before{
+  content: '';
+  display:block;
+  position: absolute;
+  border-radius:50%;
+  border:1px solid var(--color-red);
+  left: -20px;
+  right: -20px;
+  bottom: -20px;
+  top: -20px;
+  animation: animate 1.5s linear infinite;
+  opacity:0;
+  backface-visibility:hidden;  
+
+}
+.pulsaDelay:after { animation-delay: .5s; }
+@keyframes animate {
+ 0%   { transform: scale(0.8); opacity:0; }
+ 50%  { opacity:1; }
+ 100% { transform: scale(1.1); opacity:0; }
+}
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
   }
-  .icons-bar .button-sos  h3{
-      text-align: center;
-      margin: 0 auto;
-      font-size: 1.3rem;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: Rubik, sans-serif;
-      font-weight: bold;
+  25% {
+    -webkit-transform: scale(1.1);
+  }
+  50% {
+    -webkit-transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+@-moz-keyframes pulse {
+  0% {
+    -moz-transform: scale(1);
+  }
+  25% {
+    -moz-transform: scale(1.1);
+  }
+  50% {
+    -moz-transform: scale(1);
+  }
+  100% {
+    -moz-transform: scale(1);
+  }
+}
+@-ms-keyframes pulse {
+  0% {
+    -ms-transform: scale(1);
+  }
+  25% {
+    -ms-transform: scale(1.1);
+  }
+  50% {
+    -ms-transform: scale(1);
+  }
+  100% {
+    -ms-transform: scale(1);
+  }
+}
+@-o-keyframes pulse {
+  
+  0% { -o-transform: scale(1); }
+  25% { -o-transform: scale(1.1); }
+  50% { -o-transform: scale(1); }
+  100% { -o-transform: scale(1); } 
+}
+@keyframes pulse { 
+  0% {transform: scale(1);}
+  50% {transform: scale(1.1);}
+  100% {transform: scale(1);}
+}
+/*Botão Pulsa*/
+
+
+  @keyframes animate {
+    0%   { transform: scale(0.8); opacity:0; }
+    50%  { opacity:1; }
+    100% { transform: scale(1.1); opacity:0; }
   }
 
+  
 
   .delegacia,
   .lei-maria{
@@ -475,29 +571,19 @@ h6 {
       font-size: 0.8rem;
       color: var(--color-title);
     }
-    .button-sos{
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      background: var(--color-red);
-      color: var(--color-background);
-      font-size: 1.2rem;
-      margin: 0 auto;
-      margin-bottom: 10px;
-      cursor: pointer;
-      transition: all .4s ease;
-    }
-    .button-sos:hover{
-      background: #7c1c22;
-      scale: 1.3;
-    }
-    .button-sos  h3{
-        text-align: center;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+    
+
+  
+    /* button sos */
+    .box-pulse { 
+      width:100%; 
+      width:250px; 
+      height: 135px;
+      margin:0 auto;
+      padding:0 30px;
+  }
+
+
 
     .button-ajuda .btn-denuncie{
       width: 200px;
@@ -523,7 +609,7 @@ h6 {
 
     }
     #nav.active #menu {
-      height: calc(100vh - 80px);
+      height: calc(100vh - 55px);
       visibility: visible;
       overflow-y: scroll;
     }
