--- a/css/main.css
+++ b/css/main.css
@@ -31,12 +31,13 @@ header{
   background-size: cover;
 }
 body::-webkit-scrollbar {
-  width: 5px;               
+  width: 8px;               
 }
 
 body::-webkit-scrollbar-track {
   background: transparent;        
 }
+
 
 body::-webkit-scrollbar-thumb {
   background-color: var(--color-red);    
@@ -216,12 +217,17 @@ h6 {
   #menu .menu-desktop {
     display: flex;
     list-style: none;
-    gap: 0.6rem;
+    gap: 0.5rem;
+    align-items: center;
   }
   
   #menu .menu-desktop a {
     display: block;
     padding: 0.6rem;
+  }
+
+  #menu .menu-desktop.btn-denucia{
+    padding: 0;
   }
   
   #btn-mobile {
@@ -478,240 +484,6 @@ h6 {
         font-family:Merriweather, sans-serif ;
         font-size: 2rem;
       }
-  
-  /* ========== responsivo mobile principal ========== */
-  @media (max-width: 800px) {
-
-    /* ========= paginas que nao aparecem no mobiles =========  */
-    .conteudo-off{
-      display: none;
-    }
-    /* mini menu para ler as novas paginas */
-    .tab {
-      overflow: auto;
-      display: flex;
-      border-radius: 5px;
-      margin-top: 20px;
-      margin-bottom: 10px;
-      background-color: var(--color-red);
-    }
-
-    .tab button {
-      background-color: inherit;
-      float: left;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      color: var(--color-background);
-      padding: 14px 16px;
-      transition: 0.3s;
-      font-size: 17px;
-    }
-
-    .tab button.active {
-      background-color: #7c1c22;
-    }
-
-    .tabcontent {
-      display: none;
-      width: 100%;
-      margin: 0 auto;
-    }
-
-
-    /* imagem logo */
-    #nav .logo #logo-red {
-      display: block;
-    }
-    #nav .logo #logo-branco {
-      display: none;
-    }
-    #nav .logo-r #logo-red{
-      display: block;
-    }
-    #nav .logo-r #logo-branco{
-      display: none;
-    }
-    /* modelo de app so aparecem em mobile */
-    #model-desktop{
-      display: none;
-    }
-    header {
-      height: 100%;
-    }
-    #sobre #sobre-desktop {
-          display: none;
-        }
-    #model-app{
-      display: block;
-      height:100%;
-      width: 100%;
-      text-align: center;
-      background: var(--color-background);
-      font-family: Rubik, sans-serif ;
-    }
-    #model-app .woman{
-      width: 250px;
-      height: auto;
-      margin: 0 auto;
-    }
-    #model-app .woman img{
-      width: 100%;
-      margin-bottom: 50px;
-      margin-top: 50px;
-    }
-
-    #model-app .button-ajuda{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .woman p{
-      font-size: 0.8rem;
-      color: var(--color-title);
-    }
-    
-
-  
-    /* button sos */
-    .box-pulse { 
-      width:100%; 
-      width:250px; 
-      height: 135px;
-      margin:0 auto;
-      padding:0 30px;
-  }
-
-
-
-    .button-ajuda .btn-denuncie{
-      width: 200px;
-      margin-top: 20px;
-    }
-
-
-
-    /* barra lateral (Menu) */
-    #menu {
-      display: block;
-      position: absolute;
-      width: 50%;
-      top: 55px;
-      right: 0px;
-      background: var(--color-background);
-      transition: 0.5s;
-      z-index: 1000;
-      height: 0px;
-      visibility: hidden;
-      overflow: auto;
-      box-shadow: #00000030 0px 2px 3px;
-
-    }
-    #nav.active #menu {
-      height: calc(100vh - 55px);
-      visibility: visible;
-      overflow-y: scroll;
-    }
-    #menu  .menu-desktop  {
-      display: none;
-    }
-
-    #menu .menu-mobile{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      margin: 0 auto;
-      padding: 15px;
-      height: auto;
-      list-style: none;
-    }
-
-
-
-    #btn-mobile {
-      display: flex;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      border: none;
-      background: none;
-      cursor: pointer;
-      gap: 0.5rem;
-    }
-    #hamburger {
-      border-top: 4px solid var(--color-red);
-      width: 30px;
-      border-radius: 5px 0;
-      z-index: 9000;
-    }
-    #hamburger::after,
-    #hamburger::before {
-      content: '';
-      display: block;
-      width: 30px;
-      height: 4px;
-      border-radius: 5px 0;
-      background: var(--color-red);
-      margin-top: 5px;
-      transition: 0.3s;
-      position: relative;
-    }
-    #nav.active #hamburger {
-      border-top-color: transparent;
-    }
-    #nav.active #hamburger::before {
-      transform: rotate(135deg);
-    }
-    #nav.active #hamburger::after {
-      transform: rotate(-135deg);
-      top: -8px;
-    }
-
-
-    .row .right{
-      position: absolute;
-      width: 90%;
-      margin: 0 auto;
-      height: auto;
-      top: 30%;
-      right: 0;
-      color: #fff;
-    }
-
-    .right p{
-      font-size: 1rem;
-
-    }
-    .right h3 {
-      font-size: 1.4rem;
-    }
-
-    /* page denuncie-page */
-    #denuncie-page .denuncie-card p{
-      color: var(--color-turquesa);
-    }
-    #denuncie-page .denuncie-card p a{
-      color: var(--color-red);
-    }
-    #denuncie-page h2{
-      color: var(--color-red);
-      font-size: 1.6rem;
-    }
-
-    /* page legislacao-page */
-    #medidas-page h1{
-      font-size: 1.6rem;
-    }
-
-    /* page legislacao-page */
-    #legislacao-page h2{
-      font-size: 1.4rem;
-    }
-
-
-  }
-  /* fim responsivo 850px */
 
 
   /* estatisticas */
@@ -764,19 +536,6 @@ h6 {
 
   }
 
-  @media only screen and (max-width: 850px) {
-    .estatistica{
-      grid-template-columns: auto;
-      max-width: 800px;
-    }
-    .estatistica2 h2{
-      font-size: 1rem;
-    }
-    .estatistica2 p{
-      font-size: 12px;
-      line-height: 20px;
-    }
-  }
 
 
   /* Sobre */
@@ -831,21 +590,6 @@ h6 {
   }
 
   
-  @media only screen and (max-width: 600px) {
-    .sobre{
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      text-align: center;
-    } 
-    .sobre h1{
-      font-size: 2.5rem;
-    }
-    .sobre h3{
-      font-size: 1.3rem;
-    }
-    }
-
     /* legislação */
 
     #legislacao{
@@ -904,14 +648,7 @@ h6 {
     font-family: Rubik, sans-serif;
 
   }
-  @media only screen and (max-width: 600px) { 
-    .legislacao-logo{
-      grid-column: 1 / 4;
-    }
-    .legislacao-texto{
-      grid-column: 1 / 4;
-    }
-  }
+
   .orientacoes{
     display: grid;
     grid-template-columns:  1fr 450px;
@@ -985,46 +722,6 @@ h6 {
     
   }
 
-  @media only screen and (max-width: 600px) { 
-   .orientacoes {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-   }
-   .teste{
-    width: 300px;
-    margin: 0 auto;
-   }
-   .card{ 
-   margin-top: 30px;
-  }
-    .agrecao {
-    display: flex;
-    flex-direction: column;
-   }
-
-   .violence h2, .agressor h2{
-    font-size: 2rem;
-  }
-
-  }
-  @media only screen and (max-width: 1024px) { 
-    .orientacao{
-      grid-column: 1 / 4;
-    }
-    .teste{
-      grid-column: 1 / 4;
-      margin: 0 auto;
-    }
-    .violence , .agressor{
-      display: flex;
-      flex-direction: column;
-    }
-    .violence h2, .agressor h2{
-      font-size: 2rem;
-    }
-  }
 
 
   /* medidas protetivas */
@@ -1035,12 +732,7 @@ h6 {
   .dl-blurbs {
     display: grid;
  }
-  @media (min-width: 768px) {
-    .dl-blurbs {
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2vw;
-   }
- }
+
  /* LIST */
   dl {
     counter-reset: count;
@@ -1049,22 +741,7 @@ h6 {
     padding-right: 4vw;
     margin: 0;
  }
-  @media (min-width: 768px) {
 
-    dl {
-      padding-left: 2vw;
-   }
-   
- }
-  @media (min-width: 1024px) {
-    .dl-blurbs{
-      grid-template-columns: repeat(4, 1fr);
-    }
-    dl {
-      padding-top: 3vw;
-      padding-bottom: 3vw;
-   }
- }
   dl + dl {
     counter-reset: counter 4;
  }
@@ -1124,26 +801,7 @@ h6 {
   width: 100%;
  }
 
- @media only screen and (max-width: 600px) {  
-  .denuncie h2{
-    font-size: 1.6rem;
-    padding: 0;
-  }
-  .denuncie-card {
-    margin-top: -2.7rem;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 250px;
 
-  }
-  .card-1-m{
-    display: flex;
-    flex-direction: column;
-  }
-  .card-1{
-    display: flex;
-    flex-direction: column;
-  }
-  }
 
   /* Colaboradores do projeto */
   .colaboradores{
@@ -1174,13 +832,7 @@ h6 {
     color: var(--color-title);
   }
   
-  
- @media only screen and (max-width: 850px) {  
-  .colaboradores{
-    display: flex;
-    flex-direction: column;
-  }
-  }
+
 
   /* Fale conosco- contato */
 #contato{
@@ -1238,16 +890,6 @@ input:active{
 .contato .card-body button:hover{
   background: #7c1c22;
 }
-   /* verificar isso dps */
-@media only screen and (max-width: 600px) {  
-  .contato .card {
-      max-width: 300px;
-   margin: 0 auto;
-  }
-    #contato {
-      height: 130vh;
-    }
- }
 
 
 /* Footer */
@@ -1279,21 +921,6 @@ footer p{
   color: var(--color-background);
 }
 
-@media only screen and (max-width: 600px) {  
-  .footer-template{
-    display: flex;
-    flex-direction: column;
-  }
-  .footer-colum{
-    grid-column: 1 / 6;
-    text-align: center;
-  }
-
-  .footer-template ul{
-    margin-top: 40px;
-  }
- }
-
 
  /* btn- topo */
  .btn-top {
@@ -1319,4 +946,5 @@ footer p{
 .btn-top:hover::after {
   margin-top:-8px;
 }
+
 
