--- a/css/main.css
+++ b/css/main.css
@@ -812,16 +812,25 @@ h6 {
     gap: 20px;
   }
   .col1{
-    display: flex;
+    display: grid;
+    grid-template-columns: 180px 1fr;
     align-items: center;
+    justify-items: start;
   }
   .col1-img {
     max-width: 150px;
-    margin-right: 10px;
+    height: auto;
+    width: 150px;
+    display: flex;
+    margin: 0 auto;
+    border: 4px solid var(--color-red);
+    border-radius: 50%;
+
   }
   .col1 img{
     width: 100%;
     margin: 0 auto;
+    border-radius: 50%;
   }
   .col1-texto p{
     margin: 10px 0;
